switch from base64 to hex